Panel prod et debut filtre

--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 {% include "include/notif.html.twig" %}
 {% include "include/maps.html.twig" %}
+{% include "include/filtre.html.twig" %}
 
     <style>
           /* Shadow des interface du site */
