--- a/matete-web/templates/annonce/edit.html.twig
+++ b/matete-web/templates/annonce/edit.html.twig
@@ -3,11 +3,114 @@
 {% block title %}Edit Annonce{% endblock %}
 
 {% block body %}
-    <h1>Edit Annonce</h1>
 
-    {{ include('annonce/_form.html.twig', {'button_label': 'Update'}) }}
+{% include "include/retour.html.twig" %}
 
-    <a href="{{ path('annonce_index') }}">back to list</a>
-
-    {{ include('annonce/_delete_form.html.twig') }}
+    <form method="POST" action="{{ path('annonce_edit',{'id':annonce.id}) }}">
+    {# Met en colonne #}
+    <div class="absolute w-screen h-screen flex flex-col">
+            {# Logo Matete #}
+            <div class="flex justify-center m-16" >
+                <img class="w-3/12 h-3/12" src="{{ asset('image/logotexte.png') }}">
+            </div>
+            {# Formulaire de gestion de compte #}
+            <div class="px-10 p-4 shadow-2xl mx-auto rounded-2xl bg-white">
+                <div class="">
+                    {# Titre #}
+                    <div class="flex justify-center text-4xl font-extrabold">
+                        <h1>Gestion de compte</h1>
+                    </div>
+                    {# Ligne N°1 #}
+                    <div class="flex justify-centrer mx-auto">
+                        {# Zone de saisie Nom #}
+                        <div class="mt-5 w-5/12">
+                            <label for="nom">Libellé du produit</label>
+                            <input type="text" id="libelleProd" name="libelleProd" placeholder="{{annonce.libelleProduit}}" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none" >
+                        </div>
+                        {# Séparateur Milieu #}
+                        <div class="mt-5 w-2/12 "></div>
+                        {# Zone de saisie Ancien mot de passe #}    
+                        <div class="mt-5 w-5/12 ">
+                             <label for="cDebut">Créneaux début :</label><br>
+                            <input type="datetime-local" id="cDebut" name="cDebut" placeholder="Entrez un Créneaux" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none " required>
+                        </div>
+                    </div>
+                    {# Ligne N°2 #}
+                    <div class="flex justify-centrer mx-auto">
+                        {# Zone de saisie Prénom #}
+                        <div class="mt-5 w-5/12">
+                            <label for="pass">Prix Unitaire :</label>
+                            <input type="number" step="0.01" id="prixUnitaire" name="prixUnitaire" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none " placeholder="Saisir le Prix/unité" required>
+                        </div>
+                        {# Séparateur Milieu #}
+                        <div class="mt-5 w-2/12 "></div>
+                        {# Zone de saisie Nouveau Mot de passe #}    
+                        <div class="mt-5 w-5/12 ">
+                            <label for="cFin">Créneaux fin :</label><br>
+                            <input type="datetime-local" id="cFin" name="cFin" placeholder="Entrez un Créneaux" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none " required>
+                        </div>
+                    </div>
+                    {# Ligne N°3 #}
+                    <div class="flex justify-centrer mx-auto">
+                        {# Zone de saisie Téléphone #}
+                        <div class="mt-5 w-5/12">
+                            <label for="Mail">Quantité :</label><br>
+                            <input type="number" step="1" id="quantite" name="quantite" placeholder="Entrez une Quantité" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none " required>   
+                        </div>
+                        {# Séparateur Milieu #}
+                        <div class="mt-5 w-2/12 "></div>
+                        {# Zone de saisie Confirmation du mot de passe #}    
+                        <div class="mt-5 w-5/12 ">
+                           <label for="pass">Catégorie :</label><br>
+                            <select name="categorie" id="categorie" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none">
+                                <option value="" disabled selected >Choisir une catégorie</option>
+                                {% for categorie in categories %}
+                                    <option value="{{ categorie.id }}">{{ categorie.libelle }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                    {# Ligne N°3 #}
+                    <div class="flex justify-centrer mx-auto">
+                        {# Zone de saisie Téléphone #}
+                        <div class="mt-5 w-5/12">
+                            <label for="lieu">Lieu :</label><br>
+                            <select name="leslieux" id="leslieux" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none">
+                                <option value="" disabled selected >Selectionner un lieu</option>
+                                {% for unlieu in lieux %}
+                                    <option value="{{ unlieu.id }}">{{ unlieu.nom }}</option>
+                                {% endfor %}
+                            </select>   
+                        </div>
+                        {# Séparateur Milieu #}
+                        <div class="mt-5 w-2/12 "></div>
+                        {# Bouton submit "Confirmer" #}
+                        <div class="w-5/12 flex justify-center border">
+                            <div class="mt-10 w-5/12 flex border mr-9">
+                                <input type="submit" id="editInfo" name="editInfo" value="Confirmer" class="w-28 p-2.5 bg-yellow-300 rounded-lg cursor-pointer">
+                            </div>
+</form>
+                            {# Bouton submit "Supprimer" #}
+                            <div class="mt-10 w-5/12 flex justify-between border">
+                                <form method="POST" action="{{ path('annonce_delete',{'id':annonce.id}) }}">
+                                <button type="submit" id="delAcc" name="delAcc" value="Supprimer" class="w-28 h-full p-2.5  bg-red-600 rounded-lg cursor-pointer text-white"> Supprimer</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mt-10 w-full flex justify-end mr-9">
+                        <input type="submit" id="miseEnLigne" name="miseEnLigne" value="Mettre en ligne" class="w-30 p-3 bg-green-500 rounded-lg cursor-pointer">
+                    </div>
+                </div>
+                {# Info+ #}
+                    <div class="mt-5">
+                        <a href="#" class="text-sm underline text-gray-600">* Seules les informations que vous voulez modifier sont à saisir </a>
+                    </div>
+                </div>
+                
+            </div>
+                
+ 
+ {# Image de fond #}
+ <div class="h-screen w-screen bg-no-repeat bg-cover" style="background-image:url('{{ asset('image/Carte.png') }}')"></div>
 {% endblock %}
