--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -25,8 +25,8 @@
     </style>  
 
 
-    <a href="{{ path('login_security') }}">
-      <button class="rotate z-50 bg-yellow-200 w-20 h-20 absolute top-0 right-0 absolute mt-16 mr-32 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fas fa-shopping-basket fa-3x"></i><a href="{{ path('login_security') }}"></a></button>
+    <a href="{{ path('panier_show') }}">
+      <button class="rotate z-50 bg-yellow-200 w-20 h-20 absolute top-0 right-0 absolute mt-16 mr-32 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fas fa-shopping-basket fa-3x"></i><a href="{{ path('panier_show') }}"></a></button>
     </a>
 
     <a href="{{ path('login_security') }}">
