--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -148,13 +148,13 @@ box-shadow: inset 0px 0px 0px 0px #F0F0F0;
                   <div  class="z-30 shadoww bg-yellow-200 w-5/6 h-32 mr-8 rounded-3xl mb-10 mt-6 ml-10">
                       {# Libellé Produit#}
                       <div class="flex inline">
-                        <div class="ml-12 mt-1 ">
-                          <div class="relative z-50 w-20 h-6 top-2 ml-8 mb-2 "><i class="text-2xl  " >{{ annonce.libelle}}</i></div>
+                        <div class="ml-12 mt-1 w-40 mr-8">
+                          <div class="relative z-50  h-6 top-2  mb-2 "><i class="text-2xl flex justify-center " >{{ annonce.libelle}}</i></div>
                           {# Catégorie Produit#}
-                          <div class="relative z-50 w-5/6 h-6 top-2 ml-8 "><i class="text-1xl">{{ annonce.categorie }}</i></div>
+                          <div class="relative z-50 w-5/6 h-6 top-2 ml-8 "><i class="text-1xl ml-4">{{ annonce.categorie }}</i></div>
                         </div>
                           {# Zone quantite prix statut #} 
-                          <div class="relative z-40 bg-white w-3/6 h-16  rounded-full ml-20 top-3 mb-4 ">
+                          <div class="relative z-40 bg-white w-3/6 h-16  rounded-full  top-3 mb-4 ">
                             
                               {# Zone Quantite Prix #}
                               <div class="flex inline">
@@ -178,7 +178,7 @@ box-shadow: inset 0px 0px 0px 0px #F0F0F0;
                       <div class="flex inline ">
                         {# Bouton Detail#}
                         <a href="{{ path('annonce_edit',{'id':annonce.id}) }}" >
-                        <button name="detailAnnonce" class="flex bg-yellow-300  p-2 w-6/12 rounded-lg  ml-16 mr-16 " id="detailAnnonce" onclick="{{ path('annonce_edit',{'id':annonce.id}) }}"><i class="flex mx-auto">Détail</i></button></a>
+                        <button name="detailAnnonce" class="flex bg-yellow-300  p-2 w-6/12 rounded-lg  ml-20 mr-12 " id="detailAnnonce" onclick="{{ path('annonce_edit',{'id':annonce.id}) }}"><i class="flex mx-auto">Détail</i></button></a>
                         {# Zone Date début #}
                         <div class="relative z-40 bg-white w-3/12 h-6  rounded-full ml-10 mr-4 top-3 "><i class="flex justify-center">{{ annonce.cDebut | date('d/m H:i') }}</i></div>
                         {# Zone Date Fin #}
