--- a/matete-web/templates/include/filtre.html.twig
+++ b/matete-web/templates/include/filtre.html.twig
@@ -1,4 +1,15 @@
 {# Zone Filtre#}
-<div class="z-30 w-3/12 h-screen  shadow mx-auto rounded-2xl bg-gray-50 absolute right-0">
+<div class="z-30 w-3/12 h-screen  shadow mx-auto rounded-2xl bg-gray-50 absolute right-0" style="display: none;" id="filtres">
     <div  class="z-30 relative mx-auto"><i class="flex justify-center text-3xl">Filtres</i></div>
 </div>
+
+<script>
+
+    function openFiltre() {
+        if (document.getElementById("filtres").style.display == "block") {
+            document.getElementById("filtres").style.display="none";
+        } else {
+            document.getElementById("filtres").style.display="block";
+        }
+    }
+</script>
