--- a/matete-web/templates/main/index.html.twig
+++ b/matete-web/templates/main/index.html.twig
@@ -34,9 +34,8 @@
       <button class="rotate z-50 bg-yellow-200 w-20 h-20 absolute mt-16 ml-8 rounded-full border-yellow-900 border-4 border-opacity-25"><i class="fad fa-wheat fa-3x"></i><a href="{{ path('login_security') }}"></a></button>
     </a>
 
-    <a href="{{ path('login_security') }}">
-      <button class="rotate z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
-    </a>  
+    <button class="rotate z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick=" openFiltre() "><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
+    
     
     
     <div class=" h-screen w-screen">
