--- a/matete-web/templates/include/filtre.html.twig
+++ b/matete-web/templates/include/filtre.html.twig
@@ -1,12 +1,12 @@
 {# Zone Filtre#}
 <div class="z-30 w-3/12 h-screen  shadow mx-auto rounded-2xl bg-gray-50 absolute right-0" style="display: none;" id="filtres">
-    <div  class="z-30 relative mx-auto"><i class="flex justify-center text-3xl">Filtres</i></div>
+    <div  class="z-30 relative mx-auto"><i class="flex justify-center text-3xl">Filtre</i></div>
     
     {% for categorie in ListeCategorie %}
     <div>
         <div class="mt-32 ml-20 bg-yellow-200 w-64 h-20  rounded-lg flex">
                 <div class="relative mx-auto mt-3">
-                    <input type="radio" name="test" >
+                    <input type="radio" name="test">
                     <label for="test" class="text-2xl">{{categorie.libelle}}</label>
                 </div>
         </div>
