--- a/matete-web/templates/main/panier.html.twig
+++ b/matete-web/templates/main/panier.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Panier{% endblock %}
 {% block body %}
+{% include "include/retour.html.twig" %}
     <style>
         .shadoww{
             -webkit-box-shadow: 1px 0px 15px 11px rgba(0,0,0,0.2); 
