--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -61,12 +61,8 @@ box-shadow: inset 0px 0px 0px 0px #F0F0F0;
       </a>
     </div>
     
-    <div>
-      {# Bouton pour filtre #}
-      <a href="{{ path('login_security') }}">
-        <button class="rotate z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick="{{ path('login_security') }}"><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
-      </a>
-    </div>
+        <button class="rotate z-50 bg-yellow-200 w-20 h-20 top-0 right-0 absolute mt-16 mr-8 rounded-full border-yellow-900 border-4 border-opacity-25" onclick=" openFiltre() "><i class="fas fa-filter fa-2x mt-2 mr-0"></i></button>
+
     
     
 
