--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -102,9 +102,9 @@ box-shadow: inset 0px 0px 0px 0px #F0F0F0;
 
                   <div>
                     {# Bouton Panel Admin #}
-                    <a href="{{ path('producteur_show',{'id':app.user.id}) }}">
+                    {# <a href="{{ path('producteur_show',{'id':app.user.id}) }}">
                       <button class="z-30 w-5/6 h-16 shadow-2xl  bg-yellow-200  rounded-2xl relative top-6 mr-16 ml-4 text-lg font-sans font-bold" onclick="{{ path('producteur_show',{'id':app.user.id}) }}"><i class="">Panel Admin</i></button>
-                    </a>
+                    </a> #}
                   </div>
               </div>
 
