--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -178,7 +178,7 @@ box-shadow: inset 0px 0px 0px 0px #F0F0F0;
                         {# Zone Date début #}
                         <div class="relative z-40 bg-white w-3/12 h-6  rounded-full ml-10 mr-4 top-3 "><i class="flex justify-center">{{ annonce.cDebut | date('d/m H:i') }}</i></div>
                         {# Zone Date Fin #}
-                        <div class="relative z-40 bg-white w-3/12 h-6  rounded-full   top-3 "><i class="flex justify-center">{{ annonce.cDebut | date('d/m H:i') }}</i></div>
+                        <div class="relative z-40 bg-white w-3/12 h-6  rounded-full   top-3 "><i class="flex justify-center">{{ annonce.cFin | date('d/m H:i') }}</i></div>
                       </div>
                       
                   </div>
