--- a/matete-web/templates/lieu/new.html.twig
+++ b/matete-web/templates/lieu/new.html.twig
@@ -39,7 +39,7 @@
                     <div class="flex justify-centrer mx-auto">
                         {# Zone de saisie Libellé produit #}
                         <div class="mt-5 w-5/12">
-                            <label for="Mail">Nom de l'annonce :</label><br>
+                            <label for="Mail">Nom du lieu :</label><br>
                             <input type="text" id="Nomlieu" name="Nomlieu" placeholder="Entrez un Nom" class="border border-gray-400 border-opacity-50 shadow-md rounded my-1.5 h-9 w-full p-1 focus:outline-none " required>
                         </div>
                         <div class="mt-5 w-2/12 ">
