--- a/matete-web/templates/panel_prod/index.html.twig
+++ b/matete-web/templates/panel_prod/index.html.twig
@@ -70,7 +70,7 @@ box-shadow: inset 0px 0px 0px 0px #F0F0F0;
     <div class="z-30 w-4/12 h-screen  shadow mx-auto rounded-2xl bg-gray-50 absolute">
       
         <div class="z-20 flex ml-8 ">
-               <div class="z-10 absolute left-0" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-51.91,155.90 C213.85,138.09 -32.20,2.54 461.60,-13.29 L190.77,-108.28 L-14.18,-33.08 Z" style="stroke: none; fill: #fde68a;"></path></svg></div>
+               <div class="z-10 absolute left-0" style="heighten;" : 150px; overflow: hidd><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-51.91,155.90 C213.85,138.09 -32.20,2.54 461.60,-13.29 L190.77,-108.28 L-14.18,-33.08 Z" style="stroke: none; fill: #fde68a;"></path></svg></div>
    
               {# Colonne Bouton IMAGE/TEXT #}
                       
